changed and added dependencies/libraries

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,25 @@
 /build
+
+.idea/
+vcs.xml
+.name
+*.iml
+*.hprof
+.gradle
+/local.properties
+.DS_Store
+/captures
+*.log
+*.tmp
+*.temp
+.externalNativeBuild
+.cxx
+local.properties
+*.jks
+*.keystore
+*.aab
+proguard-rules.pro
+proguardFiles/
+/coverage/
+/coverage.ec
+/navigation/
