--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.PDA">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +25,16 @@
         </activity>
         <service android:name=".services.NotificationService" />
         <receiver android:name=".services.NotificationReceiver"/>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
