--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ lifecycleRuntimeCompose = "2.7.0"
 material = "1.6.6"
 roomVersion = "2.6.1"
 protoliteWellKnownTypes = "18.0.0"
+coil = "2.1.0"
 
 
 [libraries]
@@ -46,6 +47,7 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 protolite-well-known-types = { group = "com.google.firebase", name = "protolite-well-known-types", version.ref = "protoliteWellKnownTypes" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 
 [plugins]
